--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "firebase": "^11.8.1",
     "framer-motion": "^12.12.1",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
